fix: react filmes-online wrap searchParams

--- a/src/components/NavBar/scss/style.scss
+++ b/src/components/NavBar/scss/style.scss
@@ -26,38 +26,4 @@
       }
     }
   }
-
-  form {
-    display: flex;
-    gap: 0.5rem;
-
-    button {
-      background-color: var(--secondary_color);
-      border: 2px solid var(--hover);
-      border-radius: 4px;
-      color: var(--primary_color);
-      padding: 0px 2rem;
-      font-size: 1.7rem;
-      display: flex;
-      align-items: center;
-      cursor: pointer;
-      transition: 0.5s;
-
-      &:hover {
-        background-color: var(--hover);
-      }
-    }
-
-    input {
-      padding: 0.2rem 0.8rem;
-      border-radius: 4px;
-      border: none;
-      font-size: 1.5rem;
-      color: var(--primary_color);
-
-      &:focus {
-        outline-color: var(--hover);
-      }
-    }
-  }
 }
